k8s/profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  namespace: default
  labels:
    app: profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile
          # Pull the latest image from AWS ECR repository
          image: 414628022468.dkr.ecr.ap-southeast-1.amazonaws.com/otakutory-profile-service:latest
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: default
spec:
  selector:
    app: profile-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
